# media2

./: .gitignore
GLExample/: settings.gradle
GLExample/app/: build.gradle
GLExample/app/src/androidTest/java/com/blueberry/glexampe/: ExampleInstrumentedTest.java
GLExample/app/src/main/: AndroidManifest.xml
GLExample/app/src/main/cpp/: CMakeLists.txt  GLRender.cpp  GLRender.h  app.cpp  eglsurface.cpp  eglsurface.h  gl2jni.cpp  gl2jni.h  logger.h  surfacejni.cpp  surfacejni.h
GLExample/app/src/main/java/com/blueberry/glexampe/: EGLJNILib.java  EGLSurfaceActivity.java  GL2JNILib.java  GL2JNIView.java  GL2SurfaceViewActivity.java  MainActivity.java  SurfaceJNILib.java  SurfaceViewActivity.java
GLExample/app/src/main/res/layout/: activity_eglsurface.xml  activity_gl2_surface_view.xml  activity_main.xml
GLExample/app/src/main/res/values/: strings.xml  themes.xml
GLExample/app/src/main/res/values-night/: themes.xml
GLExample/app/src/test/java/com/blueberry/glexampe/: ExampleUnitTest.java
GLExample/doc/: android使用GLSurfaceView搭建OpenGL环境.md  android使用SurfaceView搭建OpenGL环境.md
GLExample/gradle/wrapper/: gradle-wrapper.properties
MediaPlayer/: build.gradle
MediaPlayer/app/: build.gradle
MediaPlayer/app/src/main/: AndroidManifest.xml
MediaPlayer/app/src/main/cpp/: AVSync.cpp  AVSync.h  AudioFrame.cpp  AudioFrame.h  CMakeLists.txt  GLRender.cpp  GLRender.h  MediaPlayerController.cpp  MediaPlayerController.h  MyFormat.cpp  MyFormat.h  VideoFrame.cpp  VideoFrame.h  app.cpp  logger.h  mediaplayerjni.cpp  safe_queue.h
MediaPlayer/app/src/main/java/com/blueberry/videoplayer/: MainActivity.java  MediaPlayerController.java  VideoPlayerActivity.java
MediaPlayer/app/src/main/res/layout/: activity_main.xml  activity_video_player_actvitiy.xml
MediaPlayer/app/src/test/java/com/blueberry/videoplayer/: ExampleUnitTest.java
MediaPlayer/gradle/wrapper/: gradle-wrapper.properties
MediaRecorder/: .gitignore  build.gradle  settings.gradle
MediaRecorder/app/: build.gradle  multidex_keep_file.txt
MediaRecorder/app/src/main/: AndroidManifest.xml
MediaRecorder/app/src/main/java/com/blueberry/mediarecorder/: AudioEncoder.kt  AudioEncoderThread.kt  CameraUtils.kt  Constants.kt  IndicatorAdapter.kt  MainActivity.kt  MediaCodecFactory.kt  PageActivity.kt  PreviewSurfaceCallback.kt  RecordVideoThread.kt  RecorderTimer.kt  VideoActivity.kt  VideoEncoder.kt  VideoEncoderThread.kt  VideoView.kt  VideoViewModel.kt
MediaRecorder/app/src/main/res/drawable/: long_drawable.xml  short_drawable.xml
MediaRecorder/app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_page.xml  activity_video.xml  item_dot_view.xml
MediaRecorder/app/src/main/res/values/: strings.xml
MediaRecorder/app/src/test/java/com/blueberry/mediarecorder/: ExampleUnitTest.kt
MediaRecorder/gradle/wrapper/: gradle-wrapper.properties
VideoCut/: settings.gradle
VideoCut/app/: build.gradle
VideoCut/app/src/androidTest/java/com/blueberry/videocut/: ExampleInstrumentedTest.kt
VideoCut/app/src/main/: AndroidManifest.xml
VideoCut/app/src/main/java/com/blueberry/videocut/: BitmapUtil.kt  CameraInfo.kt  CameraOpenStatus.kt  CameraPreviewFragment.kt  CameraPreviewViewModel.kt  CameraSurfaceRender.kt  (+13 more)
VideoCut/app/src/main/res/layout/: activity_main.xml  camera_preview.xml
VideoCut/app/src/main/res/menu/: menu_main.xml
VideoCut/app/src/main/res/navigation/: nav_graph.xml
VideoCut/app/src/main/res/values/: strings.xml  themes.xml
VideoCut/app/src/main/res/values-night/: themes.xml
VideoCut/app/src/main/res/values-v29/: themes.xml
VideoCut/gradle/wrapper/: gradle-wrapper.properties
VideoPlayer/app/src/main/: AndroidManifest.xml
VideoPlayer/app/src/main/cpp/: CMakeLists.txt  audio_common.cpp  audio_common.h  audio_effect.cpp  audio_effect.h  audio_player.cpp  audio_player.h  audio_recorder.cpp  audio_recorder.h  buf_manager.h  jni_interfaces.cpp  jni_interfaces.h  jni_mediacodec_audio.cpp  jni_play_mp3_interfaces.cpp  jni_play_mp3_interfaces.h  logger.h  safe_queue.h
VideoPlayer/app/src/main/res/layout/: activity_main.xml  activity_media_player_video.xml  activity_opensl.xml  activity_opensl_play_mp3_audio.xml
VideoPlayer/doc/: 使用MediaCodec+OpenSL编写简单的音频播放器.md  解读OpenSL回声Demo示例.md
audio-effects/: a.out  sin-creater  sin-creater.cpp
audio-effects/sin-creater.dSYM/Contents/: Info.plist
audio-effects/sin-creater.dSYM/Contents/Resources/DWARF/: sin-creater
audioeffect/: settings.gradle
audioeffect/app/: build.gradle
audioeffect/app/src/main/: AndroidManifest.xml
audioeffect/app/src/main/cpp/: Equalizer.cpp  Equalizer.h  audioeffect_jni.cpp  equalizer_jni.cpp  logger.h
audioeffect/app/src/main/res/layout/: activity_equalizer.xml  activity_main.xml
audioeffect/app/src/main/res/values/: strings.xml  themes.xml
audioeffect/app/src/main/res/values-night/: themes.xml
audioeffect/gradle/wrapper/: gradle-wrapper.properties
ffmpeg-decoder/: App.cpp  CMakeLists.txt  Decoder.cpp  Demuxing.cpp  Demuxing.h  string_util.h
ffmpeg-decoder-jpeg/: App.cpp  Demuxing.cpp  ImageProcessor.cpp  ImageProcessor.h
ffmpeg-decoder-sws/: App.cpp  CMakeLists.txt  Demuxing.cpp  Demuxing.h
ffmpeg-decoder-sws/doc/: 使用sws_scale转换视频、使用swr_convert转换音频.md
ffmpeg-decoder-sws/res/: tmp.pcm
ffmpeg-decoder/doc/: 使用ffmpeg分离mp4文件.md
fft-sample/: FFTRoutine.cpp  Mayer_FFT.c  a.out  fft.cpp  main.cpp
h264encoder/: CMakeCache.txt  CMakeLists.txt  Makefile  X264Encoder.cpp  cmake_install.cmake  x264_encoder
h264encoder/doc/: FirstUsex264.md
h264encoder/main.dSYM/Contents/Resources/DWARF/: main
h264encoder/res/: akiyo.264  akiyo_cif_code.h264  build.doc
h265encoder/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  x265_encoder
h265encoder/doc/: FirstUsex265.md
h265encoder/res/: akiyo.265  akiyo_cif_code.h265  build.doc
lameencoder/: LameEncoder.cpp  Mp3Encoder.cpp  使用lame编码音频文件.md
lameencoder/res/: doc.md
vpxendoder/: .gitignore  CMakeCache.txt  CMakeLists.txt  VpxEncoder.cpp
vpxendoder/doc/: FirstUsexVpx.md
vpxendoder/res/: akiyo.vpx  build.doc
(+39 files in other folders)
